reformed/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollouts-dev
  namespace: dev
  labels:
    app: rollouts-dev
    type: rollout
spec:
  replicas: 2
  strategy:
    canary:
      canaryMetadata:
        annotations:
          rollout: canary
        labels:
          name: rollouts-dev
          rollout: canary
      # stableMetadata:
      #   annotations:
      #     rollout: stable
      #   labels:
      #     name: rollouts-dev
      #     rollout: stable
      canaryService: rollouts-svc-canary
      stableService: rollouts-svc-stable
      analysis:
        templates:
          - templateName: success-rate
        analysisRunMetadata:
          labels:
            type: analysisrun
        args:
          - name: canary-service
            value: rollouts-svc-canary
          - name: stable-service
            value: rollouts-svc-stable
      trafficRouting:
        istio:
          virtualServices:
            - name: rollouts-vsvc1
              routes:
                - primary
      steps:
        - setWeight: 20
        - pause: { duration: 10s }
        - setWeight: 40
        - pause: { duration: 10s }
        - setWeight: 50
        - pause: { duration: 10s }
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: rollouts-dev
  template:
    metadata:
      labels:
        app: rollouts-dev
    spec:
      containers:
        - name: rollouts-dev
          image: helloworld:0.0.2
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: 20Mi
              cpu: 2m
