reformed/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollouts-svc-stable
  namespace: dev
  labels:
    app: rollouts-svc-stable
    type: service
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: rollouts-dev
    # This selector will be updated with the pod-template-hash of the canary ReplicaSet. e.g.:
    # rollouts-pod-template-hash: 7bf84f9696

---
apiVersion: v1
kind: Service
metadata:
  name: rollouts-svc-canary
  namespace: dev
  labels:
    app: rollouts-svc-canary
    type: service
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: rollouts-dev
    # This selector will be updated with the pod-template-hash of the stable ReplicaSet. e.g.:
    # rollouts-pod-template-hash: 789746c88d
